2005-07-20  Sankar P  <psankar@novell.com>

	* Consolidated the proxy and proxy-login plugins into the 
	groupwise-features plugins and merged the ChangeLogs and copied the 
	following files from their old plugins directories.

	* proxy.[ch]
	* proxy-login.[ch]
	* org-gnome-proxy-errors.xml
	* org-gnome-proxy-login-errors.xml
	* proxy-login-dialog.glade
	* proxy-listing.glade
	* proxy-add-dialog.glade

2005-07-19  Vivek Jain <jvivek@novell.com>

	* junk-mail-settings.c: Marked strings for translation

2005-07-15  Sankar P  <psankar@novell.com>

	* proxy-login.h: Removed the permissions from the structure, 
	since it is no longer needed.

2005-07-15  Sankar P  <psankar@novell.com>

	* proxy-login.c: Put permissions on the store instead of the
	global structure as it gets unref before store_add.
	
2005-07-14  Not Zed  <NotZed@Ximian.com>

	* proxy-login.c (proxy_login_add_new_store): fixed the store
	permission names.

2005-07-14  Vivek Jain  <jvivek@novell.com>
	
	* proxy.c: (proxy_commit),(proxy_abort):
	 NULL checks before we do anything else here (quite likely to be NULL)
	**Fixes #310347

2005-07-13  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (LIBADD): Link with libeutil. Link with
	libevolution-mail on Win32 only. (Have I understood correctly that
	it isn't considered a good idea on Unix to link plugins at
	link-time with libevolution-mail?)

	* org-gnome-proxy-login.eplug.xml: Use SOEXT.

2005-07-13  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (LIBADD): Link with libeutil.


2005-07-13  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (NO_UNDEFINED_REQUIRED_LIBS): As the code does use
	functions from libevolution-mail, link with it. But OK, let's do
	it (at build time) only on Win32, then.

2005-07-12  Sankar P  <psankar@novell.com>

	* Makefile.am :
	Added CLEANFILES element and glade and error files to EXTRA_DIST.

2005-07-12  Sankar P  <psankar@novell.com>

	* Makefile.am :
	Added missed header files to the SOURCES.
	